--- a/app/styles/pages/_rock-and-roll-ember.scss
+++ b/app/styles/pages/_rock-and-roll-ember.scss
@@ -59,32 +59,6 @@ section.rock-and-roll-ember {
     }
   }
 
-  .key-message {
-    background-color: $red;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    margin-bottom: 80px;
-
-    h2 {
-      max-width: 800px;
-      padding-left: 10px;
-      padding-right: 10px;
-      color: white;
-      text-align: center;
-      margin-left: auto;
-      margin-right: auto;
-      line-height: 64px;
-    }
-
-    @include media($tablet) {
-      background: $red url(https://embermeetup.com/wp-content/uploads/RARE-key.png) calc(100% - 20px) center no-repeat;
-      padding-right: 170px;
-      min-height: 210px;
-      background-size: 150px auto;
-    }
-  }
-
   .max-width-800px {
     max-width: 800px;
   }
@@ -105,19 +79,6 @@ section.rock-and-roll-ember {
   .smaller-font {
     font-weight: 100;
     font-size: 80%;
-  }
-
-  .rare-lightning-background {
-    background: url(images/RARE-lightning-background.svg) center no-repeat $skyBlue;
-
-    .box-content--content {
-      padding: 30px 0;
-      text-align: center;
-    }
-
-    p {
-      font-size: 120%;
-    }
   }
 
   .schedule {
@@ -194,9 +155,7 @@ section.rock-and-roll-ember {
   .packages-table {
     display: flex;
     flex-direction: row;
-    max-width: 920px;
-    margin-left: auto;
-    margin-right: auto;
+    font-size: 38px;
 
     &--plan {
       display: flex;
@@ -259,7 +218,7 @@ section.rock-and-roll-ember {
       }
 
       .content {
-        margin-bottom: 40px;
+        margin: 0;
       }
 
       .footer {
@@ -487,5 +446,82 @@ section.training-intro {
     .workshop {
       @include span-columns(4);
     }
+  }
+}
+
+.workshop-schedule .box-content h2 {
+  font-size: 30px;
+  .release-date {
+    background: $blue;
+    padding: 5px 10px;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 18px;
+    text-transform: uppercase;
+  }
+}
+
+.key-message {
+  background-color: $red;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin-bottom: 80px;
+
+  h2 {
+    max-width: 800px;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: white;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 64px;
+  }
+
+  @include media($tablet) {
+    background: $red url(https://embermeetup.com/wp-content/uploads/RARE-key.png) calc(100% - 20px) center no-repeat;
+    padding-right: 170px;
+    min-height: 210px;
+    background-size: 150px auto;
+  }
+}
+
+.rare-lightning-background {
+  background: url(images/RARE-lightning-background.svg) center no-repeat $skyBlue;
+
+  .box-content--content {
+    padding: 30px 0;
+    text-align: center;
+  }
+
+  p {
+    font-size: 120%;
+  }
+}
+
+.rock-and-roll-ember {
+  .workshop, .workshop-aside {
+    margin-top: 20px;
+  }
+  @include media($tablet) {
+    .workshop-aside {
+      @include span-columns(4);
+    }
+
+    .workshops {
+      @include span-columns(8);
+      .workshop {
+        @include span-columns(6);
+        max-width: 400px;
+      }
+    }
+  }
+
+  .prerequisites {
+    // @include span-columns(3);
+    background: $skyBlue;
+    padding: 10px 20px;
+    border-radius: 10px;
   }
 }
