--- a/app/templates/rock-and-roll-ember.hbs
+++ b/app/templates/rock-and-roll-ember.hbs
@@ -1,5 +1,29 @@
 {{scroll-to position=0}}
 
+<section class="training-header">
+  <div class="training-title">
+    <span class="rock-and-roll-logo">
+      From Rock and Roll with Ember author:
+    </span>
+    <h1>
+      Authentication implementation in Ember apps
+    </h1>
+  </div>
+  <div class="training-summary">
+    <div class="page-wrap">
+      <p>
+        <strong>3-part course over 3 weeks</strong> including pre-recorded videos, interactive workshop and post workshop support
+      </p>
+      <p>
+        Upcoming series on Dec 18th, Jan 12th and Jan 18th
+      </p>
+      <p>
+        Available in local timezones for Asia, Europe and Americas
+      </p>
+    </div>
+  </div>
+</section>
+
 <section class="page-wrap training-intro">
   <div class="training-summary">
     <h2 class="heading">
