--- a/app/templates/rock-and-roll-ember.hbs
+++ b/app/templates/rock-and-roll-ember.hbs
@@ -56,34 +56,35 @@
       <aside class="testimonials">
         <blockquote>
           <p>
-            Quisque risus est, tincidunt id volutpat ut, egestas id tortor. Proin sit amet lorem nulla.
+            Thank you so much @balint and @mauty, was a definitely worth the time and money.
           </p>
           <footer>
-            &mdash; Friederick Nietzsche
+            <span class="photo">
+              <img src="/assets/images/rare/philip.png" alt="" />
+            </span>
+            Philip <br> Southam
           </footer>
         </blockquote>
         <blockquote>
           <p>
-            Quisque risus est, tincidunt id volutpat ut, egestas id tortor. Proin sit amet lorem nulla.
+            The concept videos before the talk were a big help; if anyone missed those I'd suggest taking a look.
           </p>
           <footer>
-            &mdash; Friederick Nietzsche
+            <span class="photo">
+              <img src="/assets/images/rare/nicholas.png" alt="" />
+            </span>
+            Nicholas <br> Rutherford
           </footer>
         </blockquote>
         <blockquote>
           <p>
-            Quisque risus est, tincidunt id volutpat ut, egestas id tortor. Proin sit amet lorem nulla.
+            This workshop is the fastest way to become comfortable with authentication in Ember applications.
           </p>
           <footer>
-            &mdash; Friederick Nietzsche
-          </footer>
-        </blockquote>
-        <blockquote>
-          <p>
-            Quisque risus est, tincidunt id volutpat ut, egestas id tortor. Proin sit amet lorem nulla.
-          </p>
-          <footer>
-            &mdash; Friederick Nietzsche
+            <span class="photo">
+              <img src="/assets/images/rare/taras.jpg" alt="" />
+            </span>
+            Taras <br> Mankovski
           </footer>
         </blockquote>
       </aside>
