Adds actual workshop ticket links.

--- a/app/templates/rock-and-roll-ember.hbs
+++ b/app/templates/rock-and-roll-ember.hbs
@@ -6,7 +6,7 @@
       From Rock and Roll with Ember author:
     </span>
     <h1>
-      Authentication implementation in Ember apps
+      Implementing Authentication in Ember
     </h1>
   </div>
   <div class="training-summary">
@@ -15,7 +15,7 @@
         <strong>3-part course over 3 weeks</strong> including pre-recorded videos, interactive workshop and post workshop support
       </p>
       <p>
-        Upcoming series on Dec 18th, Jan 12th and Jan 18th
+        Upcoming series on Dec 13th, Jan 12th and Jan 18th
       </p>
       <p>
         Available in local timezones for Asia, Europe and Americas
@@ -141,25 +141,29 @@
   <div class="section-content">
     <ul class="timezones">
       <li>
-        <h3>Asia timezone</h3>
-        <strong>Dec 18th - 12pm - 4pm JST (GMT+9)</strong><br>
-        <button type="button" name="button" {{action (toggle "showTickets" this)}}>Book this workshop for <strong>$495</strong> <i class="fa fa-chevron-right"></i></button>
+        <h3>Asian timezone</h3>
+        <strong>Dec 13th - 12pm - 4pm JST (GMT+9)</strong><br>
+        <a href="https://www.eventbrite.com/e/implementing-authentication-in-ember-asian-timezone-tickets-28810984430" class="button red-button" target="_blank">
+          Book this workshop for <strong>$495</strong> <i class="fa fa-chevron-right"></i>
+        </a>
       </li>
       <li>
-        <h3>Europe timezone</h3>
+        <h3>European timezone</h3>
         <strong>Jan 12th - 12pm - 4pm BST (GMT)</strong><br>
-        <button type="button" name="button" {{action (toggle "showTickets" this)}}>Book this workshop for <strong>$495</strong> <i class="fa fa-chevron-right"></i></button>
+        <a href="https://www.eventbrite.com/e/implementing-authentication-in-ember-european-timezone-tickets-28926698534" class="button red-button" target="_blank">
+          Book this workshop for <strong>$495</strong> <i class="fa fa-chevron-right"></i>
+        </a>
       </li>
       <li>
-        <h3>America timezone</h3>
+        <h3>Americas timezone</h3>
         <strong>Jan 18th - 12pm - 4pm EST (GMT-5)</strong><br>
-        <button type="button" name="button" {{action (toggle "showTickets" this)}}>Book this workshop for <strong>$495</strong> <i class="fa fa-chevron-right"></i></button>
+        <a href="https://www.eventbrite.com/e/implementing-authentication-in-ember-americas-timezone-tickets-28926729627" class="button red-button" target="_blank">
+          Book this workshop for <strong>$495</strong> <i class="fa fa-chevron-right"></i>
+        </a>
       </li>
     </ul>
     <div class="limited-seats">
       <strong>Each workshop is limited to 16 participants</strong> in order to ensure learners can get their questions answered by our instructors and mentors.
-      <br>
-      <button type="button" name="button" class="button red-button" {{action (toggle "showTickets" this)}}>Book now!</button>
     </div>
     <aside class="more-info">
       <h3>More info?</h3>
@@ -187,10 +191,10 @@
     targetAttachment="center"
     translucentOverlay=true
   }}
-    <iframe  src="//eventbrite.com/tickets-external?eid=26391705301&ref=etckt"
-             frameborder="0" height="400" width="100%" vspace="0"
-             hspace="0" marginheight="5" marginwidth="5" scrolling="auto"
-             allowtransparency="true">
+    <iframe src="//eventbrite.com/tickets-external?eid=28810984430&ref=etckt"
+            frameborder="0" height="308" width="100%" vspace="0"
+            hspace="0" marginheight="5" marginwidth="5" scrolling="auto"
+            allowtransparency="true">
     </iframe>
   {{/modal-dialog}}
 {{/if}}
