--- a/app/styles/pages/_rock-and-roll-ember.scss
+++ b/app/styles/pages/_rock-and-roll-ember.scss
@@ -303,20 +303,17 @@
     padding: 0;
     margin: 0;
     list-style: none;
+    text-align: center;
     li {
       margin: 20px 0 0 0;
     }
     h3 {
       margin: 0;
+      color: darken($blue, 20);
     }
-    button {
-      background: none;
-      border: none;
-      outline: none;
-      color: $red;
-      padding: 0;
-      margin: 0;
+    .button {
       font-size: 21px;
+      margin-top: 10px;
     }
   }
   .limited-seats {
