Adds video as hero image.

--- a/app/templates/rock-and-roll-ember.hbs
+++ b/app/templates/rock-and-roll-ember.hbs
@@ -1,13 +1,14 @@
 {{scroll-to position=0}}
 
 <section class="training-header">
-  <div class="training-title">
-    <span class="rock-and-roll-logo">
-      From Rock and Roll with Ember author:
-    </span>
-    <h1>
-      Implementing Authentication in Ember
-    </h1>
+  <div class="page-wrap">
+    <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
+      <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
+        <div class="wistia_embed wistia_async_bprp4egb1x videoFoam=true" style="height:100%;width:100%">
+          &nbsp;
+        </div>
+      </div>
+    </div>
   </div>
   <div class="training-summary">
     <div class="page-wrap">
@@ -25,6 +26,7 @@
 </section>
 
 <section class="training-will-learn page-wrap training-section">
+
   <h2>What you'll learn</h2>
   <div class="section-content">
     <ul>
