Made testimonials text italic instead of bold

--- a/app/styles/pages/_rock-and-roll-ember.scss
+++ b/app/styles/pages/_rock-and-roll-ember.scss
@@ -170,7 +170,8 @@
   }
   .testimonials {
     blockquote {
-      font-weight: bold;
+      font-weight: normal;
+      font-style: italic;
       font-size: 21px;
       padding: 0;
       margin: 20px 0;
